PySCF 1.3 alpha-2 (2017-01-04)
---------------------------
* Added
  - Supports for 1D, 2D PBC systems
* Improved
  - PBC integral transformation
  - CASSCF state-average interface to handle different spins of sub-solver
  - Numerical stability for Davidson diagonalization solver
  - FCI numerical stability with multithreading
  - FCI with spatial symmetry
* Bugfix
  - X2C to use custom basis for X matrix


PySCF 1.3 alpha-1 (2016-12-04)
---------------------------
* Added
  - Quantum chemistry ECP for solid
  - AO-direct CCSD
  - CI coefficients transformation for one-particle basis rotation
  - CIAH second order SCF solver for PBC KRHF and KUHF
  - CISD and CISD 1, 2-particle density matrices
  - Selected-CI and Selected-CI 1, 2-particle density matrices
  - Smearing for PBC mean-field calculation
  - PBC density fitting
* Improved
  - Optimized CCSD(T)
  - Change the default kpts mesh (to always include gamma point)
  - PBC repeated images used by lattice summation


PySCF 1.2 (2016-11-07)
----------------------


PySCF 1.2 beta (2016-09-13)
---------------------------
* Added
  - State average CASSCF helper function for mixed spin/spatial-symmetry FCI solvers
  - Example for transition dipole momentum
  - U-CCSD (based on spin-orbital formulation)
  - IP/EA/EE-EOM-CCSD
  - Function to dump CASSCF canonical orbitals in molden format
  - Analytical Fourier transformation for AO and AO product
  - Co-iterative augmented hessian (CIAH) orbital optimizer
  - Optimized einsum function using numpy.tensordot function
  - Burkatzi-Filippi-Dolg pseudo potential
  - FCI solver to support integrals which do not have 8-fold symmetry
  - Dual interface to call pyFFTW or numpy.fft
  - Maximum overlap method (MOM) method for SCF method
* Improved
  - Memory usage for MDF method (molecular and PBC systems)
  - PBC AO value evaluation performance
  - Orbitals space symmetrization
  - CASSCF subspace (core, active, external) symmetrization