@@ -13,6 +13,7 @@ from pyscf.pbc.scf import khf as krhf
 from pyscf.pbc.scf import kuhf
 from pyscf.pbc.scf import newton_ah
 from pyscf.pbc.scf import addons
+from pyscf.pbc.scf.x2c import sfx2c1e, sfx2c
 
 RHF = rhf.RHF
 UHF = uhf.UHF
