@@ -1,3 +1,9 @@
+PySCF 1.3 beta (2017-02-?)
+--------------------------
+* Added
+  - sf-X2C for PBC Hamiltonian
+
+
 PySCF 1.3 alpha-2 (2017-01-04)
 ---------------------------
 * Added
